@@ -81,7 +81,7 @@ AC_MSG_RESULT(version $VERSION)
 dnl Checks for header files.
 AC_PATH_X
 AC_HEADER_STDC
-AC_CHECK_HEADERS(locale.h)
+AC_CHECK_HEADERS(locale.h apsymbols.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 
